k8s/v1.37.0/clusters/dev/jaeger/kubernetes-objects/virtualServiceJaeger.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: jaeger-virtual-service
  namespace: hello-kubernetes
spec:
  hosts: ["jaeger.maifuj.com"]
  gateways: ["istio-ingress/gateway-https"]
  http:
    - route:
        - destination:
            host:  jaeger-dev.jaeger.svc.cluster.local
            port: {number: 16686}
